# staxCOdingChallenge

./: .gitignore  CMakeLists.txt  README.md
include/: stax.h
src/: main.cpp  stax.cpp  stax.h
test/src/: UT_Stax_Test.cpp  staxTest.cpp  staxTest.h
